@@ -20,9 +20,11 @@ templates:
     conditionals:
       discover_sort:
         conditions:
-          - library_type: movie
+          - originals_only: false
+            library_type: movie
             value: primary_release_date.desc
-          - library_type: show
+          - originals_only: false
+            library_type: show
             value: first_air_date.desc
       originals:
         conditions:
@@ -42,6 +44,14 @@ templates:
         conditions:
           - originals_only: false
             value: <<final_tmdb_key>>
+      discover_limit:
+        conditions:
+          - originals_only: false
+            value: 0
+      discover_count:
+        conditions:
+          - originals_only: false
+            value: 100
       allowed_streaming:
         conditions:
           - originals_only: true
@@ -74,12 +84,11 @@ templates:
     mdblist_list: https://mdblist.com/lists/k0meta/<<key>>-<<originals>>
     limit: <<limit>>
     tmdb_discover:
-      limit: 0
+      limit: <<discover_limit>>
       with_watch_providers: <<discover_with>>
-      vote_count.gte: 100
+      vote_count.gte: <<discover_count>>
       watch_region: <<discover_region>>
       sort_by: <<discover_sort>>
-
 
 collections:
   Streaming Collections:
